fixed some css problems
Now, the site should be responsive, and the sections shouldn't overlap
when the browser width changes.

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /*
-#                       _         _      _            
-#                      (_)       | |    | |           
-#  __   __  __ _  _ __  _   __ _ | |__  | |  ___  ___ 
+#                       _         _      _
+#                      (_)       | |    | |
+#  __   __  __ _  _ __  _   __ _ | |__  | |  ___  ___
 #  \ \ / / / _` || '__|| | / _` || '_ \ | | / _ \/ __|
 #   \ V / | (_| || |   | || (_| || |_) || ||  __/\__ \
 #    \_/   \__,_||_|   |_| \__,_||_.__/ |_| \___||___/
-#                                                     
-# 
+#
+#
 */
 body {
   background-color: #000000;
@@ -22,7 +22,7 @@ p {
 }
 
 h2 {
-  padding: 1%;
+  padding: 1px;
   margin-top: 15px;
   margin-bottom: 15px;
   text-transform: uppercase;
@@ -45,18 +45,18 @@ h2 {
   font-size: 200%;
   margin-top: 40%;
   padding: 4%;
-  border-radius: 50%;
+  border-radius: 20%;
 }
 
-/* 
-####                      _                _    _               
- #                       (_)              | |  (_)              
- #   _ __    __ _ __   __ _   __ _   __ _ | |_  _   ___   _ __  
- #  | '_ \  / _` |\ \ / /| | / _` | / _` || __|| | / _ \ | '_ \ 
+/*
+####                      _                _    _
+ #                       (_)              | |  (_)
+ #   _ __    __ _ __   __ _   __ _   __ _ | |_  _   ___   _ __
+ #  | '_ \  / _` |\ \ / /| | / _` | / _` || __|| | / _ \ | '_ \
  #  | | | || (_| | \ V / | || (_| || (_| || |_ | || (_) || | | |
  #  |_| |_| \__,_|  \_/  |_| \__, | \__,_| \__||_| \___/ |_| |_|
- #                            __/ |                             
- #                           |___/              
+ #                            __/ |
+ #                           |___/
 */
 .navbar-brand {
   background-color: black;
@@ -106,19 +106,16 @@ h2 {
   margin-top: 10px;
 }
 
-.container {
-  background-color: red;
-}
 
 /*
-#   _                  
-#  | |                 
+#   _
+#  | |
 #  | |__    ___  __  __
 #  | '_ \  / _ \ \ \/ /
-#  | |_) || (_) | >  < 
+#  | |_) || (_) | >  <
 #  |_.__/  \___/ /_/\_\
-#                      
-# 
+#
+#
 */
 .box {
   background-color: #2C3539;
@@ -145,21 +142,21 @@ h2 {
   width: 10px;
 }
 
-#teaching .row {
+/*#teaching .row {
   height: 160px;
-}
+}*/
 
 #teaching {
-  height: 600px;
   align-content: center;
 }
 #teaching img {
   width: 60%;
+  margin: 6%;
 }
 
 #about {
-  height: 400px;
-  padding: 6px;
+  /*height: 400px;
+  padding: 6px;*/
 }
 #about img {
   width: 100%;
@@ -170,7 +167,9 @@ h2 {
 }
 
 #writing img {
-  left-margin: 6%;
+  margin: auto;
+  margin-top: 10%;
+  width: 80;
 }
 
 #teaching img {
